--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-streamlit
-streamlit-authenticator
-st-pages
-
-transformers
-librosa
+--pre
+--extra-index-url https://download.pytorch.org/whl/nightly/cu121
 
 farm-haystack[ocr,preprocessing,file-conversion,pdf]
-sentencepiece
+librosa
 sacremoses
+sentencepiece
+st-pages
+streamlit
+streamlit-authenticator
+torch
+torchaudio
+torchvision
+transformers
