--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -1,14 +1,14 @@
 [[pages]]
-path = "psychology_qa/app.py"
+path = "app.py"
 name = "Psychology Q&A"
 icon = ":brain:"
 
 [[pages]]
-path = "psychology_qa/pages/upload_book.py"
+path = "pages/upload_book.py"
 name = "Upload a book"
 icon = ":book:"
 
 [[pages]]
-path = "psychology_qa/pages/upload_audio.py"
+path = "pages/upload_audio.py"
 name = "Upload an audiobook"
 icon = ":headphones:"
