--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 --pre
 --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 
+accelerate
 farm-haystack[ocr,preprocessing,file-conversion,pdf]
 librosa
 sacremoses
