--- a/.streamlit/pages.toml
+++ b/.streamlit/pages.toml
@@ -4,6 +4,11 @@ name = "Psychology Q&A"
 icon = ":brain:"
 
 [[pages]]
+path = "psychology_qa/pages/authors.py"
+name = "Authors"
+icon = ":writing_hand:"
+
+[[pages]]
 path = "psychology_qa/pages/upload_book.py"
 name = "Upload a book"
 icon = ":book:"
