--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -5,8 +5,9 @@ services:
       - 8501:8501
     volumes:
       - ~/.cache/huggingface/hub:/home/user/.cache/huggingface/hub:rw
-    environment:
-      - PYTHONUNBUFFERED=true
+    env_file:
+      - .app.env
+      - .postgres.env
     deploy:
       resources:
         reservations:
@@ -17,12 +18,12 @@ services:
 
   postgres:
     image: ankane/pgvector:v0.5.0
+    ports:
+      - 5432:5432
     volumes:
       - psychology_qa_pgvector:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=$POSTGRES_DB
-      - POSTGRES_USER=$POSTGRES_USER
-      - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+    env_file:
+      - .postgres.env
 
 volumes:
   psychology_qa_pgvector:
