--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 --extra-index-url https://download.pytorch.org/whl/nightly/cu121
 
 accelerate==0.22.0
+environs==9.5.0
 farm-haystack[inference,preprocessing,file-conversion]==1.20.0
 librosa==0.10.1
 peewee==3.16.3
