--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,19 +1,28 @@
 # syntax=docker/dockerfile:1
 
+FROM ubuntu:22.04 AS xpdf
+
+RUN --mount=type=cache,target=/var/cache/apt \
+    apt update && \
+    apt install wget -y && \
+    wget https://dl.xpdfreader.com/xpdf-tools-linux-4.04.tar.gz && \
+    tar -xvf xpdf-tools-linux-4.04.tar.gz && \
+    cp xpdf-tools-linux-4.04/bin64/pdftotext . && \
+    rm -rf xpdf-tools-linux-*
+
 FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
 
-RUN apt update && \
+RUN --mount=type=cache,target=/var/cache/apt \
+    apt update && \
     apt install --no-install-recommends -y \
     build-essential software-properties-common wget && \
     add-apt-repository -y ppa:deadsnakes/ppa && \
     apt install --no-install-recommends -y \
     python3.10 python3-pip python3-setuptools python3-distutils && \
     apt clean && rm -rf /var/lib/apt/lists/* && \
-    wget https://dl.xpdfreader.com/xpdf-tools-linux-4.04.tar.gz && \
-    tar -xvf xpdf-tools-linux-4.04.tar.gz && \
-    cp xpdf-tools-linux-4.04/bin64/pdftotext /usr/local/bin && \
-    rm -rf xpdf-tools-linux-* && \
     useradd -m -u 1000 user
+
+COPY --from=xpdf pdftotext /usr/local/bin
 
 USER user
 WORKDIR /home/user
@@ -25,5 +34,5 @@ RUN --mount=type=cache,target=/home/user/.cache/pip \
 
 CMD ["python3", "-m", "streamlit", "run", "psychology_qa/app.py"]
 
-COPY .streamlit .streamlit
-COPY psychology_qa psychology_qa
+COPY --chown=user .streamlit .streamlit
+COPY --chown=user psychology_qa psychology_qa
