--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,7 +15,7 @@ FROM nvidia/cuda:12.2.0-runtime-ubuntu22.04
 RUN --mount=type=cache,target=/var/cache/apt \
     apt update && \
     apt install --no-install-recommends -y \
-    build-essential software-properties-common wget && \
+    build-essential software-properties-common libfontconfig && \
     add-apt-repository -y ppa:deadsnakes/ppa && \
     apt install --no-install-recommends -y \
     python3.10 python3-pip python3-setuptools python3-distutils && \
@@ -28,7 +28,7 @@ USER user
 WORKDIR /home/user
 
 COPY requirements.txt .
-RUN --mount=type=cache,target=/home/user/.cache/pip \
+RUN --mount=type=cache,target=/home/user/.cache \
     pip install --upgrade pip && \
     pip install --requirement requirements.txt
 
