--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8501:8501
     volumes:
-      - psychology_qa_models:/home/user/.cache:rw
+      - ~/.cache:/home/user/.cache:rw
     env_file:
       - .app.env
       - .postgres.env
@@ -29,4 +29,3 @@ services:
 
 volumes:
   psychology_qa_pgvector:
-  psychology_qa_models:
