--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 accelerate==0.22.0
 environs==9.5.0
 farm-haystack[inference,preprocessing,file-conversion]==1.20.0
+humanfriendly==10.0
 librosa==0.10.1
 peewee==3.16.3
 pgvector==0.2.2
