--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8501:8501
     volumes:
-      - ~/.cache:/home/user/.cache:rw
+      - ~/.cache:/root/.cache:rw
     env_file:
       - .app.env
       - .postgres.env
