download nltk data on build

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,7 +31,9 @@ RUN --mount=type=cache,target=/var/cache/apt \
 
 COPY --from=xpdf pdftotext /usr/local/bin
 COPY --from=requirements /opt/venv /opt/venv
+
 ENV PATH="/opt/venv/bin:$PATH"
+RUN python -c "import nltk; nltk.download('punkt')"
 
 CMD ["python", "-m", "streamlit", "run", "psychology_qa/app.py"]
 
