--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -2,11 +2,12 @@ services:
   streamlit-app:
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - 8501:8501
     volumes:
-      - ~/.cache:/root/.cache:rw
+      - ./psychology_qa:/root/psychology_qa
+    #   - ~/.cache:/root/.cache:rw
     env_file:
       - .app.env
       - .postgres.env
