use non-root user in container

--- a/.app.env.example
+++ b/.app.env.example
@@ -1,6 +1,6 @@
 PYTHONUNBUFFERED=true
 HAYSTACK_TELEMETRY_ENABLED="False"
-SENTENCE_TRANSFORMERS_HOME="/root/.cache"
+SENTENCE_TRANSFORMERS_HOME="/home/user/.cache"
 
 LOGGING_LEVEL="INFO"
 LOGGING_FORMAT="%(asctime)s %(levelname)s %(name)s: %(module)s %(message)s"
