--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -6,8 +6,8 @@ services:
     ports:
       - 8501:8501
     volumes:
-      - ./psychology_qa:/root/psychology_qa
-    #   - ~/.cache:/root/.cache:rw
+      - ./psychology_qa:/home/user/psychology_qa
+      - ~/.cache:/home/user/.cache:rw
     env_file:
       - .app.env
       - .postgres.env
