add prefixes for queries and passages as required by e5 models

--- a/.app.env.example
+++ b/.app.env.example
@@ -21,6 +21,10 @@ EMBEDDING_MODEL="intfloat/multilingual-e5-large"
 EMBEDDING_FORMAT="sentence_transformers"
 EMBEDDING_TOP_K=3
 
+# required for e5 models
+PREFIX_QUERY="query: "
+PREFIX_PASSAGE="passage: "
+
 TRANSLATOR_ENABLED=false
 TRANSLATOR_BASE_LANGUAGE="en"
 TRANSLATOR_BATCH_SIZE=25
