--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        EMBEDDING_MODEL: $EMBEDDING_MODEL
+        SENTENCE_TRANSFORMERS_HOME: $SENTENCE_TRANSFORMERS_HOME
     ports:
       - 8501:8501
     volumes:
